# $Id: CHANGELOG,v 1.56 2003/10/31 07:10:07 jaco Exp $

* Wed, Oct 29, 2003, 0.5.7-cvs
  + Buchan Milne <bgmilne@cae.co.za>:
    [linuxrc]:
      - Fix error on illegal attempt to unmount /initrd/cdrom upon
        system shutdown
      - Added hostname= boot option to set the hostname
    [mklivecd]:
      - Add support ('--extraisofiles' option) for adding
        additional files to the root of the LiveCD ISO image
        (ie to see when browsing the CD normally)
  + Jaco Greeff <jaco@linuxminicd.org>:
    [Rules.mk]:
      - Created list for default normal and SCSI modules
      - Created listing for optional modules
      - Split modules into Modules.mk
    [linuxrc]:
      - Allow for finding the cloop image on SCSI devices as well
        by probing with all the SCSI modules
      - Added support for zlib_inflate if exists as a module
      - Added support for translucency kernel module
      - Utilise the fstab option as passed on the iso commandline
        to automatically mount partitions rw if specified
    [mklivecd]:
      - Be verbose in depmod command
      - Copy SCSI and optinal modules in addition to normal
        (required) ones to initrd
      - Reworked command-line parameters to be more consistent
      - Added '--experimental' option for testing non-mainstream
        options and additions
      - Added '--fstab' option for overriding the default fstab
        creation behaviour


* Mon, Oct 06, 2003, 0.5.6
  + Buchan Milne <bgmilne@cae.co.za>:
    [mklivecd]:
      - Fix rootdir to use the kernel/modules from the chroot
      - Add basic bootsplash support if bootsplash is installed
        on the image'd system (normal as well as chroot)
      - Avoid premature shell expansion polluting the exclude list
      - Optimised command-line parsing to not use redundant echo's
      - Added bootsplash theme support with '--theme' option
    [mklivecd.spec]:
      - Updated to allow for rpmbuild -ta <tarball> to work for